<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_forum"
        android:icon="@drawable/forum"
        android:title="@string/title_forum" />

    <item
        android:id="@+id/navigation_battle"
        android:icon="@drawable/battle"
        android:title="@string/title_battle" />

    <item
        android:id="@+id/navigation_learn"
        android:icon="@drawable/learn"
        android:title="@string/title_learn" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/title_profile" />

</menu>